Fix community modal text align and shadow

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1438,7 +1438,11 @@ body.is-mobile {
 }
 
 body:not(.is-mobile) {
-  .modal:not(.mod-settings) {
+  .modal.mod-community-modal {
+    box-shadow: none;
+  }
+
+  .modal:not(.mod-settings):not(.mod-community-modal) {
     backdrop-filter: blur(50px);
     animation: var(--anim-duration-fast) fadeInDown;
 
